# cited-knowledge-desk

./: .dockerignore  .env.example  .env.production.example  .gitignore  01-cited-knowledge-desk-build-plan.md  Dockerfile  README.md  docker-compose.prod.yml  docker-compose.yml  manage.py  pyproject.toml  render.yaml
.github/workflows/: ci.yml
apps/accounts/: context_processors.py  forms.py  guest.py  urls.py  views.py
apps/chat/: admin.py  consumers.py  forms.py  models.py  routing.py  services.py  urls.py  views.py
apps/documents/: admin.py  forms.py  models.py  services.py  urls.py  views.py
apps/evaluations/: admin.py  forms.py  models.py  services.py  urls.py  views.py
apps/feedback/: admin.py  forms.py  models.py  services.py  urls.py  views.py
apps/retrieval/: forms.py  urls.py  views.py
apps/workspaces/: admin.py  apps.py  models.py  services.py  signals.py  urls.py  views.py
config/: asgi.py  celery.py  urls.py  wsgi.py
config/settings/: base.py  (+2 more)
docs/: architecture.md  deployment.md  evaluation.md  linkedin-demo-script.md  release-checklist.md  render-free-deployment.md  security.md  testing.md
eval/: gold_questions.yml
scripts/: start.sh
services/: text_excerpts.py
templates/: base.html
tests/: conftest.py  test_accounts.py  test_chat.py  test_chat_websocket.py  test_citation_excerpt.py  test_documents.py  test_embedding_command.py  test_evaluations.py  test_feedback.py  test_health.py  test_ingestion.py  test_retrieval.py  test_text_excerpts.py  test_workspaces.py
workers/: document_ingestion.py  embedding_jobs.py  eval_jobs.py
(+44 files in other folders)
