[project]
name = "cited-knowledge-desk"
version = "0.1.0"
description = "A Django RAG assistant that answers uploaded-document questions with citations."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "celery[redis]>=5.5,<6.0",
    "channels>=4.2,<5.0",
    "channels-redis>=4.2,<5.0",
    "daphne>=4.2,<5.0",
    "django>=6.0,<6.1",
    "django-environ>=0.12,<1.0",
    "djangorestframework>=3.16,<4.0",
    "gunicorn>=23.0,<24.0",
    "openai>=2.40,<3.0",
    "pgvector>=0.4,<0.5",
    "psycopg[binary]>=3.2,<4.0",
    "pypdf>=6.0,<7.0",
    "python-docx>=1.2,<2.0",
    "pyyaml>=6.0,<7.0",
    "whitenoise>=6.9,<7.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.4,<10.0",
    "pytest-asyncio>=1.3,<2.0",
    "pytest-django>=4.11,<5.0",
    "playwright>=1.50,<2.0",
    "ruff>=0.12,<1.0",
]

[build-system]
requires = ["setuptools>=80"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = []

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "config.settings.local"
python_files = ["test_*.py", "*_test.py"]
testpaths = ["tests"]
markers = [
    "e2e: browser smoke tests",
]

[tool.ruff]
line-length = 100
target-version = "py312"
extend-exclude = ["*/migrations/*"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["E501"]
